Make sure that big amount of links in Panel Component won't break the layout

--- a/LinkShortener/src/components/panel/panel.css
+++ b/LinkShortener/src/components/panel/panel.css
@@ -42,6 +42,7 @@
   width: 80%;
   background: #FFFFFF;
   padding: 10px;
+  overflow-y: scroll;
 }
 
 .links-table
